# doctor-syn

./: Cargo.toml  LICENSE  README.md  test.sh
.cargo/: config.toml
.github/workflows/: ci.yml
doctor-syn/: Cargo.toml  LICENSE  README.md
doctor-syn/benches/: doctor-syn.rs
doctor-syn/src/: bdmath.rs  error.rs  expression.rs  lib.rs  name.rs  tests.rs  visitor.rs
doctor-syn/src/codegen/: c.rs  cv2.rs  mod.rs  portable_simd.rs  rust.rs
doctor-syn/src/transformation/: approx.rs  collect.rs  eval.rs  paren.rs  tools.rs  use_number_type.rs
libmgen/: Cargo.toml
libmgen/scripts/: core_simd.sh  test.sh
libmgen/src/: auxfuncs.rs  config.rs  functions.rs  hyperbolic.rs  inv_trig.rs  log_exp.rs  main.rs  recip_sqrt.rs  stats_norm.rs  stats_random.rs  test.rs  trig.rs
libmgen/tests/: sin.rs
src/: bdmath.rs  error.rs  expression.rs  exprext.rs  lib.rs  main.rs  name.rs  path.rs  polynomial.rs  tests.rs  util.rs  variablelist.rs  visitor.rs
src/approx/: mod.rs
src/codegen/: c.rs  mod.rs
src/interpreter/: mod.rs
src/num_approx/: mod.rs
src/polynomial/: mod.rs
src/test/: mod.rs
src/transformation/: approx.rs  collect.rs  eval.rs  expand.rs  fold.rs  mod.rs  paren.rs  subst.rs  tools.rs  use_number_type.rs  use_suffix.rs
tests/: libm.rs  libm32.c  libm32.rs  libm64.rs  libm64_scalar.c
