[package]
name = "libmgen"
version = "0.2.0"
edition = "2021"
description = "Mathematical library generator."
license = "GPL3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doctor-syn = { version = "0.2.0", path = "../doctor-syn" }
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
num-traits = "0.2"
bigdecimal = "0.2"
num-bigint = "0.3"
structopt = { version = "0.3", default-features = false }
